# comgen

./: .gitignore  Makefile  README.md  comgen.c  install.bat  install.sh  pyproject.toml
.github/workflows/: release.yml
src/comgen/: __init__.py  __main__.py  cli.py  config.py  executor.py  llm.py
